--- a/index.html
+++ b/index.html
@@ -30,10 +30,14 @@
     <div id="consoleContainer">
         <textarea name="console" id="console" spellcheck="false" readonly></textarea>
     </div>
+    <div id="symbolTableGraph"></div>
+    <div id="semanticErrorGraph"></div>
     <!--SCRIPTS-->
     <script src="./scripts/main.js"></script>
     <script src="./scripts/main.module.js" type="module"></script>
     <script src="./scripts/main.tabs.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/viz.js/2.1.2/viz.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/viz.js/2.1.2/full.render.js"></script>
 </body>
 
 </html>
